--- a/homti/pom.xml
+++ b/homti/pom.xml
@@ -64,6 +64,17 @@
             <version>3.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>17</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
