--- a/homti/pom.xml
+++ b/homti/pom.xml
@@ -75,6 +75,14 @@
             <version>17</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.2</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
