--- a/homti/pom.xml
+++ b/homti/pom.xml
@@ -82,6 +82,17 @@
             <version>11.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.tulskiy</groupId>
+            <artifactId>jkeymaster</artifactId>
+            <version>1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dorkbox</groupId>
+            <artifactId>Notify</artifactId>
+            <version>3.7</version>
+        </dependency>
 
     </dependencies>
     <build>
